# falcon-rs

./: Cargo.toml  README.md
src/: lib.rs
src/core/: keygen.rs  mod.rs  sign.rs  tests.rs  verify.rs
src/math/: ark.rs  fft.rs  field.rs  mat.rs  mod.rs  ntt.rs  params.rs  poly.rs  sampling.rs  util.rs
