[package]
name = "falcon-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.4", default-features = false, features = ["std"] }
ark-poly = { version = "0.4", default-features = false, features = ["std"] }


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
