[package]
name = "falcon-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.4", default-features = false, features = ["std"] }
ark-poly = { version = "0.4", default-features = false, features = ["std"] }
num-traits = "0.2"
rand_core = { version = "0.6", optional = true }

[features]
default = []
rand = ["rand_core"]


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
